<package>
  <name>robotiq_c_model_visualization</name>
  <version>0.6.2</version>
  <description>robotiq</description>
  <maintainer email="kguerin2@jhu.edu">Kel Guerin</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/robotiq</url>
  <author>Kel Guerin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <run_depend>urdf</run_depend>

  <export>

  </export>
</package>
