<?xml version="1.0"?>
<package  format="2">
  <name>robotiq_force_torque_sensor</name>
  <version>2.4.0</version>
  <description>Package for reading data from a Robotiq Force Torque Sensor</description>
  <maintainer email="nicolas@robotiq.com">Nicolas Lauzier</maintainer>
  <author email="jsavoie20@gmail.com">Jonathan Savoie</author>
  <url type="website">http://ros.org/wiki/robotiq</url>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>bondcpp</depend>
  <depend>launch_manager_interface</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  

  <export>

  </export>
</package>
